    of upstream-ontologist.
  * Add fixer for extended-description-contains-empty-paragraph.
  * Add --allow-reformatting argument to deb-scrub-obsolete.

  [ Richard Laager ]
  * Correct section name for gbp-dch in lintian-brush.conf manapage.

  [ Jelmer Vernooĳ ]
  * Inhibit log file writing when detecting debhelper buildsystem.
    Thanks, Niels Thykier for the suggestion.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 06 Mar 2021 05:11:38 +0000

lintian-brush (0.100) unstable; urgency=medium

  * Drop ognibuild to recommends; it's only used by debianize.
  * Read field lists from lintian.
  * Add support for fixing some things in debcargo.toml.
  * Enable upstream signing key updating.
  * debian-rules-uses-as-needed-linker-flag: handle exporting of
    variables without assignment.
  * declares-possibly-conflicting-debhelper-compat-versions: Remove
    debian/compat if it conflicts with control field.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 06 Mar 2021 05:03:32 +0000

lintian-brush (0.99) unstable; urgency=medium

  * Also update 'set -e' in postrm files. Closes: #983347

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 22 Feb 2021 17:53:37 +0000

lintian-brush (0.98) unstable; urgency=medium

  * Add fixer for cute-field.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 22 Feb 2021 16:29:57 +0000

lintian-brush (0.97) unstable; urgency=medium

  * Drop DEB_LDFLAGS_MAINT_APPEND ratther than leaving it empty.
  * Add fixer for obsolete-url-in-packaging.
  * Add basic fixer for debian-rules-parses-dpkg-parsechangelog.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 21 Feb 2021 23:41:21 +0000

lintian-brush (0.96) unstable; urgency=medium

  * Add fixer for debian-rules-uses-special-shell-variable.
  * Depend on newer version of debmutate, fixing maintscript
    manipulation.

 -- Jelmer Vernooĳ <jelmer@debian.org>  Mon, 15 Feb 2021 19:24:59 +0000

lintian-brush (0.95) unstable; urgency=medium

  * Add fixer for debian-rules-uses-as-needed-linker-flag.