@@ -14,6 +14,7 @@ lintian-brush (0.101) UNRELEASED; urgency=medium
   [ Jelmer Vernooĳ ]
   * Inhibit log file writing when detecting debhelper buildsystem.
     Thanks, Niels Thykier for the suggestion.
+  * Don't update changelog for inaugural unreleased entry.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 06 Mar 2021 05:11:38 +0000
 
